--- a/index.html
+++ b/index.html
@@ -1,3 +1,27 @@
 <html>
-  <h1 style="border:1px solid brown; color:orange">Перси Фабрики Джошуа</h1>
+  <head>
+    <title>Фабрика Джошуа</title>
+  </head>
+  <body style="background:#532b5c">
+  <header style="background-color:black">
+    <a href="https://www.youtube.com/@serialu006">Серіал</a>
+  </header>
+    <main style="background-color:#522f2d">
+  <table style="border:1px solid orange;background-color:#17308a;font-size:200px">
+    <tr>
+      <td>Перси фабрики Джошуа</td>
+    </tr>  
+    <tr>
+      <td>Мисик-товарищ липкого</td>
+      <td>Липкий-товарищ мисика</td>
+      <td>Д.Дарвін-син джошуа</td>
+    </tr>
+  </table>
+      <p style="color:#0084ff;text-align:center;background-color:#7a12c9;font-size:40px;">ФАКТИ ПРО ФАБРИКУ ДЖОШУА</p>
+      <p style="font-size:20px">ДАТА ВИХОДУ:2022</p>
+      <p style="font-size:20px">ВСЬОГО СЕЗОНІВ:2</p>
+      <p style="font-size:20px">ОПЕРАТОР ФАБРИКИ ДЖОШУА:Віталік Ганяк(тут може бути його фотка якшоо попросить</p>
+      </main>
+    <footer style="color:blue;background-color:black">Автор сайту:Бойко Артур Романович</footer>
+    </body>
 </html>
