--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <a href="https://www.youtube.com/@serialu006">Серіал</a>
   </header>
     <main style="background-color:#522f2d">
-  <table style="border:1px solid orange;background-color:#17308a;font-size:200px">
+  <table style="border:1px solid orange;">
     <tr>
-      <td>Перси фабрики Джошуа</td>
+      <td style="border:1px solid orange>Перси фабрики Джошуа</td>
     </tr>  
     <tr>
       <td>Мисик-товарищ липкого</td>
