--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <main style="background-color:#522f2d">
   <table style="border:1px solid orange;">
     <tr>
-      <td style="border:1px solid orange>Перси фабрики Джошуа</td>
+      <td>Перси фабрики Джошуа</td>
     </tr>  
     <tr>
       <td>Мисик-товарищ липкого</td>
