--- a/index.html
+++ b/index.html
@@ -2,26 +2,26 @@
   <head>
     <title>Фабрика Джошуа</title>
   </head>
-  <body style="background:#532b5c">
-  <header style="background-color:black">
-    <a href="https://www.youtube.com/@serialu006">Серіал</a>
+  <body style="background:darkgreen">
+  <header style="text-align:center">
+    <a style="border-radius:1px;background-color:darkblue;color:grey;font-size:50px" href="https://www.youtube.com/@serialu006">ЮТУБ КАНАЛ СЕРІАЛА</a>
   </header>
-    <main style="background-color:#522f2d">
-  <table style="border:1px solid orange;">
+    
+  <table style="border:1px solid orange;background-color:#ad19b0">
     <tr>
-      <td>Перси фабрики Джошуа</td>
+      <td style="font-size:20px">Перси фабрики Джошуа</td>
     </tr>  
     <tr>
-      <td>Мисик-товарищ липкого</td>
-      <td>Липкий-товарищ мисика</td>
-      <td>Д.Дарвін-син джошуа</td>
+      <td style="font-size:20px">Мисик-товарищ липкого</td>
+      <td style="font-size:20px">Липкий-товарищ мисика</td>
+      <td style="font-size:20px">Д.Дарвін-син джошуа</td>
     </tr>
   </table>
-      <p style="color:#0084ff;text-align:center;background-color:#7a12c9;font-size:40px;">ФАКТИ ПРО ФАБРИКУ ДЖОШУА</p>
-      <p style="font-size:20px">ДАТА ВИХОДУ:2022</p>
-      <p style="font-size:20px">ВСЬОГО СЕЗОНІВ:2</p>
-      <p style="font-size:20px">ОПЕРАТОР ФАБРИКИ ДЖОШУА:Віталік Ганяк(тут може бути його фотка якшоо попросить</p>
+  <main style="background-color:orange">
+      <p style="color:#f00212;text-align:center;background-color:lightblue;font-size:40px;">ФАКТИ ПРО ФАБРИКУ ДЖОШУА</p>
+      <p style="font-size:20px;text-align:center">ДАТА ВИХОДУ:2022</p>
+      <p style="font-size:20px;text-align:center">ВСЬОГО СЕЗОНІВ:2</p>
+      <p style="font-size:20px;text-align:center">ОПЕРАТОР ФАБРИКИ ДЖОШУА:Віталік Ганяк(тут може бути його фотка якшоо попросить)</p>
       </main>
-    <footer style="color:blue;background-color:black">Автор сайту:Бойко Артур Романович</footer>
     </body>
 </html>
