--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Фабрика Джошуа</title>
   </head>
-  <body style="background:darkgreen">
+  <body style="background:darkgreen;margin: 0;">
   <header style="text-align:center">
     <a style="border-radius:1px;background-color:darkblue;color:grey;font-size:50px" href="https://www.youtube.com/@serialu006">ЮТУБ КАНАЛ СЕРІАЛА</a>
   </header>
